--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src test",
-    "test": "ts-mocha test/**"
+    "test": "tap --jobs=1 --no-coverage test/**/*.ts"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run test -- -b"
+      "pre-commit": "lint-staged && npm run test"
     }
   },
   "lint-staged": {
@@ -32,8 +32,7 @@
     "*.md": "prettier --write"
   },
   "devDependencies": {
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.14",
+    "@types/tap": "^14.10.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "^7.3.1",
@@ -43,9 +42,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "mocha": "^8.0.1",
     "prettier": "^2.0.5",
-    "ts-mocha": "^7.0.0",
+    "tap": "^14.10.7",
     "typescript": "^3.9.5"
   }
 }
