--- a/.prettierrc
+++ b/.prettierrc
@@ -8,11 +8,18 @@
   "jsxSingleQuote": false,
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "svelteBracketNewLine": true,
   "arrowParens": "always",
   "trailingComma": "es5",
   "proseWrap": "preserve",
   "htmlWhitespaceSensitivity": "css",
   "vueIndentScriptAndStyle": true,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "overrides": [
+    {
+      "files": "*.md",
+      "options": {
+        "printWidth": 120
+      }
+    }
+  ]
 }
