--- a/package.json
+++ b/package.json
@@ -3,48 +3,60 @@
   "version": "4.0.0",
   "description": "Compile a glob-like pattern into a regular expression",
   "author": "Alex Schneider <me@schneider.ax>",
-  "repository": "https://github.com/axtgr/wildcard-match",
   "license": "ISC",
+  "repository": "https://github.com/axtgr/wildcard-match",
   "keywords": [
-    "match",
-    "wildcard",
     "glob",
     "pattern",
+    "wildcard",
+    "match",
     "regexp"
   ],
-  "main": "dist/index.js",
+  "private": true,
+  "type": "commonjs",
+  "main": "build/index.js",
+  "module": "build/index.mjs",
+  "unpkg": "build/index.umd.js",
+  "types": "build/index.d.ts",
+  "exports": {
+    "import": "./build/index.mjs",
+    "require": "./build/index.js"
+  },
   "files": [
-    "dist"
+    "build"
   ],
   "scripts": {
-    "build": "tsc",
-    "lint": "eslint src test",
-    "test": "tap --jobs=1 --no-coverage --reporter=terse test/**/*.ts"
+    "build": "rollup -c",
+    "lint": "eslint {src,test}/*",
+    "format": "eslint --cache --fix {src,test}/* && prettier --write **/*.md",
+    "test": "ts-node -T -r \"core-js/modules/es.symbol.async-iterator\" -I \" \" node_modules/pta/src/cli.js --no-esm test/[!_]*.js"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run test"
+      "pre-commit": "npm run format"
     }
   },
-  "lint-staged": {
-    "(src|test)/**/*.ts": [
-      "eslint --cache --fix"
-    ],
-    "*.md": "prettier --write"
-  },
   "devDependencies": {
-    "@types/tap": "^14.10.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
+    "@wessberg/rollup-plugin-ts": "^1.3.5",
+    "core-js": "^3.6.5",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-problems": "^4.0.0",
+    "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
-    "tap": "^14.10.7",
-    "typescript": "^3.9.5"
+    "pta": "^0.1.3",
+    "rollup": "^2.32.0",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-node": "^9.0.0",
+    "ts-transform-default-export": "^1.0.2",
+    "typescript": "^3.9.5",
+    "typescript-transform-macros": "^1.1.1"
   }
 }
