--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "private": true,
   "type": "commonjs",
   "main": "build/index.js",
-  "module": "build/index.mjs",
+  "module": "build/index.es.mjs",
   "unpkg": "build/index.umd.js",
   "types": "build/index.d.ts",
   "exports": {
-    "import": "./build/index.mjs",
+    "import": "./build/index.es.mjs",
     "require": "./build/index.js"
   },
   "files": [
