Lint and format benchmark

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "scripts": {
     "build": "rollup -c",
     "bench": "node bench/bench",
-    "lint": "eslint {src,test}/*",
-    "format": "eslint --cache --fix {src,test}/* && prettier --write **/*.md",
+    "lint": "eslint {src,test,bench}/*",
+    "format": "eslint --cache --fix {src,test,bench}/* && prettier --write **/*.md",
     "test": "ts-node -T -r \"core-js/modules/es.symbol.async-iterator\" -I \" \" node_modules/pta/src/cli.js --no-esm test/[!_]*.js"
   },
   "husky": {
