--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wildcard-match",
   "version": "5.1.0",
-  "description": "Compile a glob-like pattern into a regular expression",
+  "description": "A tiny and extremely fast library for compiling and matching basic glob patterns",
   "author": "Alex Schneider <me@schneider.ax>",
   "license": "ISC",
   "repository": "https://github.com/axtgr/wildcard-match",
