--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^9.0.0",
     "ts-transform-default-export": "^1.0.2",
-    "typescript": "^3.9.5",
-    "typescript-transform-macros": "^1.1.1"
+    "typescript": "^3.9.5"
   }
 }
