--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, macOS-latest, ubuntu-latest]
-        node: [8, 10, 12, 14]
+        node: [10, 12, 14]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out the repository
