Add types to package.json exports for TS 4.7+

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "types": "build/index.d.ts",
   "exports": {
     "import": "./build/index.es.mjs",
-    "require": "./build/index.js"
+    "require": "./build/index.js",
+    "types": "./build/index.d.ts"
   },
   "files": [
     "build"
