--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "bench": "node bench/bench",
     "lint": "eslint {src,test,bench}/*",
     "format": "eslint --cache --fix {src,test,bench}/* && prettier --write **/*.md",
-    "test": "ts-node -T -r \"core-js/modules/es.symbol.async-iterator\" -I \" \" node_modules/pta/src/cli.js test/[!_]*.js"
+    "test": "ts-node -T -r \"core-js/modules/es.symbol.async-iterator\" -I \" \" node_modules/pta/src/cli.js test/[!_]*.mjs"
   },
   "husky": {
     "hooks": {
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "@wessberg/rollup-plugin-ts": "^1.3.5",
     "benchmark": "^2.1.4",
     "core-js": "^3.36.0",
     "eslint": "^7.32.0",
@@ -57,8 +56,9 @@
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^3.4.5",
     "ts-node": "^9.1.1",
     "ts-transform-default-export": "^1.0.3",
-    "typescript": "^4.9.5"
+    "typescript": "~4.7.0"
   }
 }
