--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "regexp"
   ],
   "private": true,
+  "packageManager": "yarn@1.22.22",
   "type": "commonjs",
   "main": "build/index.js",
   "module": "build/index.es.mjs",
